--- a/.github/workflows/start-release.yml
+++ b/.github/workflows/start-release.yml
@@ -18,4 +18,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           version: ${{ inputs.version }}
-          update_version_command: mvn versions:set -DgenerateBackupPoms=false -DnewVersion=$VERSION
+          update_version_command: echo 123
