--- a/.github/workflows/package-to-s3.yml
+++ b/.github/workflows/package-to-s3.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Archive Release
       uses: dbaldree/github-actions-baldree/actions/tar-release@v0.0.7-rc1
       with:
-        directory: '/artefacts'
+        directory: './artefacts'
         filename: 'cloud-cc-datawarehouse-postgres.tar.gz'
         exclusions: '*.git* /*node_modules/* .editorconfig *actions* README.md'
   upload_artifact:
