--- a/.github/workflows/complete-release.yml
+++ b/.github/workflows/complete-release.yml
@@ -8,7 +8,7 @@ env:
   pr_version: ${{ github.event.number }}
 jobs:
   complete_release:
-    if: github.event.pull_request.merged == 'true'
+    if: github.event.pull_request.merged
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v4
