--- a/actions/complete-release/action.yaml
+++ b/actions/complete-release/action.yaml
@@ -11,8 +11,9 @@ inputs:
     required: true
     description: GIT Token
 runs:
-  - shell: bash
-    run: $GITHUB_ACTION_PATH/merge.sh
+  - name: Create a release
+    shell: bash
+    run: $GITHUB_ACTION_PATH/release.sh
     env:
       PR_VERSION: ${{ inputs.PR_VERSION }}
       GITHUB_REPOSITORY: ${{ inputs.GITHUB_REPOSITORY }}
