--- a/actions/complete-release/action.yaml
+++ b/actions/complete-release/action.yaml
@@ -1,5 +1,6 @@
-name: 'Complete Release'
-description: 'Creates releases from a merged PR'
+---
+name: complete-release
+description: Creates releases from a merged PR
 inputs:
   PR_VERSION:
     required: true
@@ -11,13 +12,15 @@ inputs:
     required: true
     description: GIT Token
 runs:
-  - name: Create a release
-    shell: bash
-    run: $GITHUB_ACTION_PATH/release.sh
-    env:
-      PR_VERSION: ${{ inputs.PR_VERSION }}
-      GITHUB_REPOSITORY: ${{ inputs.GITHUB_REPOSITORY }}
-      GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
+  using: composite
+  steps:
+    - name: Create a release
+      shell: bash
+      run: $GITHUB_ACTION_PATH/release.sh
+      env:
+        PR_VERSION: ${{ inputs.PR_VERSION }}
+        GITHUB_REPOSITORY: ${{ inputs.GITHUB_REPOSITORY }}
+        GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
 branding:
    icon: 'gift'
    color: 'blue'
