--- a/actions/complete-release/action.yaml
+++ b/actions/complete-release/action.yaml
@@ -11,19 +11,15 @@ inputs:
   GITHUB_TOKEN:
     required: true
     description: GIT Token
-jobs:
-  release:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - shell: bash
-        run: $GITHUB_ACTION_PATH/release.sh
-        env:
-          PR_VERSION: ${{ inputs.PR_VERSION }}
-          GITHUB_REPOSITORY: ${{ inputs.GITHUB_REPOSITORY }}
-          GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
+runs: 
+  using: ubuntu-latest
+  steps:
+    - shell: bash
+      run: $GITHUB_ACTION_PATH/release.sh
+      env:
+        PR_VERSION: ${{ inputs.PR_VERSION }}
+        GITHUB_REPOSITORY: ${{ inputs.GITHUB_REPOSITORY }}
+        GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
 branding:
    icon: 'gift'
    color: 'blue' 
