--- a/.github/workflows/complete-release.yml
+++ b/.github/workflows/complete-release.yml
@@ -10,11 +10,19 @@ jobs:
   complete_release:
     runs-on: ubuntu-latest
     steps:
-        - uses: actions/checkout@v4
-        - uses: dbaldree/github-actions-baldree/actions/complete-release@v0.2.0-rc1
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          with:
-            PR_VERSION: ${{ env.pr_version }}
-            GITHUB_REPOSITORY: ${{ github.repository }}
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+          draft: false
+          prerelease: false
