--- a/.github/workflows/complete-release.yml
+++ b/.github/workflows/complete-release.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   pr_version: ${{ github.event.number }}
-  tag_name: ${{ github.event.release.tag_name }}
+  tag_name: ${{ github.ref_name }}
 jobs:
   if_merged:
       if: github.event.pull_request.merged == true
