--- a/.github/workflows/complete-release.yml
+++ b/.github/workflows/complete-release.yml
@@ -15,17 +15,16 @@ jobs:
       steps:
         - name: Checkout code
           uses: actions/checkout@v4
-        - name: Set tag var
-          id: vars
-          run: echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_TAG
+        - name: Set env
+          run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
         - name: Create Release
           id: create_release
           uses: actions/create-release@v1
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           with:
-            tag_name: ${{ steps.vars.outputs.tag }}
-            release_name: Release ${{ steps.vars.outputs.tag }}
+            tag_name: $RELEASE_VERSION
+            release_name: Release $RELEASE_VERSION
             body: |
               PR: 
               - #${{ env.pr_version }}
