--- a/.github/workflows/complete-release.yml
+++ b/.github/workflows/complete-release.yml
@@ -18,6 +18,8 @@ jobs:
         - name: Set output
           id: vars
           run: echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
+        - name: Set output
+          run: echo "GIT_TAG=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
         - name: Create Release
           id: create_release
           uses: actions/create-release@v1
